parse proof Close #12